# SPEC

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
crates/spec-core/: Cargo.toml
crates/spec-core/src/: kv_metadata.rs  lib.rs  paged_kv_cache.rs  spsc.rs  state.rs
crates/spec-decode/: Cargo.toml
crates/spec-decode/src/: decode.rs  lib.rs  model.rs  pipeline.rs  sampler.rs
crates/spec-decode/src/decoder/: async_decoder.rs  mod.rs  stats.rs  sync_decoder.rs
crates/spec-decode/src/models/: mod.rs  utils.rs
crates/spec-decode/src/models/llama/: base.rs  mod.rs  paged.rs
crates/spec-engine/: Cargo.toml
crates/spec-engine/src/: async_spec_decoding_engine.rs  bare_model_engine.rs  lib.rs  spec_decoding_engine.rs  target_model_engine.rs
python/: conftest.py  run.py  spec_test_utils.py  test_e2e_generation.py  test_model_kv_cache_parity.py  test_spec.py
