[workspace]
members = ["crates/spec-core", "crates/spec-decode", "crates/spec-engine"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
crossbeam-utils = "0.8"
candle-core = { version = "0.9", default-features = false }
candle-nn = "0.9"
candle-transformers = "0.9"
candle-flash-attn-v3 = "0.9"
hf-hub = "0.4"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.9"
log = "0.4"
env_logger = "0.11"
