[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "spec-engine"
version = "0.1.0"
requires-python = ">=3.9"

[tool.maturin]
manifest-path = "crates/spec-engine/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "spec_engine"

[dependency-groups]
dev = [
    "maturin>=1.12.5",
]
