[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "SPEC"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "patchelf>=0.17.2.4",
]

[tool.maturin]
manifest-path = "crates/spec-engine/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "SPEC"

[dependency-groups]
dev = [
    "maturin>=1.12.5",
]
