[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "SPEC"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "patchelf>=0.17.2.4",
]

[tool.maturin]
manifest-path = "crates/spec-engine/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "SPEC"

[dependency-groups]
dev = [
    "maturin>=1.12.5",
    "pytest>=8.3.4",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["python"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
