[package]
name = "spec-decode"
version = "0.1.0"
edition.workspace = true

[dependencies]
spec-core = { path = "../spec-core" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
