[package]
name = "spec-decode"
version = "0.1.0"
edition.workspace = true

[features]
cuda = ["candle-core/cuda"]
flash-attn = ["candle-flash-attn-v3"]

[dependencies]
spec-core = { path = "../spec-core" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-flash-attn-v3 = { workspace = true, optional = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
