[package]
name = "spec-engine"
version = "0.1.0"
edition.workspace = true

[lib]
name = "spec_engine"
crate-type = ["cdylib"]

[dependencies]
spec-core = { path = "../spec-core" }
spec-decode = { path = "../spec-decode" }
pyo3 = { workspace = true }
numpy = { workspace = true }
anyhow = { workspace = true }
candle-core = { workspace = true }
tokenizers = { workspace = true }

