[package]
name = "spec-engine"
version = "0.1.0"
edition.workspace = true

[lib]
name = "spec_engine"
crate-type = ["cdylib"]

[features]
cuda = ["spec-decode/cuda"]
flash-attn = ["spec-decode/flash-attn"]

[dependencies]
spec-core = { path = "../spec-core" }
spec-decode = { path = "../spec-decode" }
pyo3 = { workspace = true }
candle-core = { workspace = true }
tokenizers = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
